--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "goit-react-hw-03-image-finder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://deniskodak.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "basiclightbox": "^5.0.4",
     "gh-pages": "^3.2.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
